--- a/PRIME.html
+++ b/PRIME.html
@@ -228,8 +228,8 @@
     <div class="subtitle">エンジニアリング課題解決シート（提出版）</div>
     <div class="header-meta">
       <span>エンジニア氏名：<input type="text" id="engineer_name" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
-      <span>所属：<input type="text" id="department" style="border:none;border-bottom:1px solid #ccc;width:140px;font-size:12px;padding:0 2px;" /></span>
-      <span>想定職種：<input type="text" id="job_role" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
+      <span>配属先：<input type="text" id="department" style="border:none;border-bottom:1px solid #ccc;width:140px;font-size:12px;padding:0 2px;" /></span>
+      <span>現在の業務内容：<input type="text" id="job_role" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
     </div>
     <div class="badge">PRIME 2026 課題解決ドキュメント</div>
 
@@ -246,7 +246,7 @@
         <div>
           <div class="field-group">
             <div class="field-label">課題名 <span class="sub">簡潔なタイトル</span></div>
-            <input type="text" id="title" />
+            <textarea id="background" rows="3"></textarea>
           </div>
           <div class="field-group">
             <div class="field-label">背景 <span class="sub">なぜこの課題に向き合うのか</span></div>
@@ -616,4 +616,5 @@
     });
   </script>
 </body>
+
 </html>
