--- a/PRIME.html
+++ b/PRIME.html
@@ -224,7 +224,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>PRIME 2026 Problem Solving Document</h1>
+    <h1>PRIME 2026 </h1>
     <div class="subtitle">エンジニアリング課題解決シート（提出版）</div>
     <div class="header-meta">
       <span>エンジニア氏名：<input type="text" id="engineer_name" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
@@ -618,3 +618,4 @@
 </body>
 
 </html>
+
