--- a/PRIME.html
+++ b/PRIME.html
@@ -227,9 +227,22 @@
     <h1>PRIME 2026 </h1>
     <div class="subtitle">エンジニアリング課題解決シート（提出版）</div>
     <div class="header-meta">
-      <span>エンジニア氏名：<input type="text" id="engineer_name" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
-      <span>配属先：<input type="text" id="department" style="border:none;border-bottom:1px solid #ccc;width:140px;font-size:12px;padding:0 2px;" /></span>
-      <span>現在の業務内容：<input type="text" id="job_role" style="border:none;border-bottom:1px solid #ccc;width:160px;font-size:12px;padding:0 2px;" /></span>
+      <span>エンジニア氏名：<textarea
+    id="engineer_name"
+    class="inline-textarea"
+    rows="1"
+    placeholder=""
+  ></textarea></span>
+      <span>配属先：<textarea
+    id="department"
+    class="inline-textarea"
+    rows="1"
+  ></textarea></span>
+      <span>現在の業務内容： <textarea
+    id="job_role"
+    class="inline-textarea"
+    rows="1"
+  ></textarea></span>
     </div>
     <div class="badge">PRIME 2026 課題解決ドキュメント</div>
 
@@ -618,4 +631,5 @@
 </body>
 
 </html>
+
 
